--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
         /* Responsive Design */
         @
         @media (max-width: 480px) {
+    .profile img {
+        width: 80px;
+        height: 80px;
+    }
+}
+
+        @media (max-width: 480px) {
             body {
                 font-size: 14px;
             }
