--- a/index.html
+++ b/index.html
@@ -86,6 +86,28 @@
             .portfolio-item p, .portfolio-item a {
                 font-size: 14px;
             }
+            .profile img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+@media (max-width: 480px) {
+    .container {
+        padding: 10px;
+        box-sizing: border-box;
+    }
+    body {
+        background-size: cover;
+        background-attachment: fixed;
+    }
+    .portfolio-item img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+
         }
     </style>
 </head>
